error-messages-added

--- a/app/assets/stylesheets/product/product-placing-page.scss
+++ b/app/assets/stylesheets/product/product-placing-page.scss
@@ -93,7 +93,7 @@
               font-size: 12px;
             }
           }
-          .product-name__defauld {
+          .product-name__default {
             box-sizing: border-box;
             margin-top: 8px;
             width: 100%;
