--- a/app/assets/stylesheets/devise/_login.scss
+++ b/app/assets/stylesheets/devise/_login.scss
@@ -42,7 +42,8 @@
             line-height: 14px;
             height: 14px;
           }
-          button.signup-btn {
+          a.signup-btn {
+            display: block;
             border: 1px solid #0099e8;
             background-color: #0099e8;
             height: 40px;
@@ -52,6 +53,8 @@
             margin: 8px 0 0;
             font-size: 14px;
             color: #fff;
+            text-decoration:none;
+            
           }
         }
         .social-login {
@@ -161,7 +164,7 @@
               }
             }
           }
-          .submit {
+          input.submit {
             width: 328px;
             height: 50px;
             background: #ea352d;
@@ -169,6 +172,7 @@
             border: 1px solid #ea352d;
             margin: 24px 0 40px;
             font-size: 14px;
+            cursor: pointer;
           }
           .forgot-password {
             float: left;
