--- a/app/views/users/logout.html.haml
+++ b/app/views/users/logout.html.haml
@@ -2,9 +2,9 @@
 
 .wrapper
   .content.clearfix
-    %form
+    %logout
       =link_to "ログアウト", destroy_user_session_path, method: :delete, class: "logout-btn" 
 
-    -# = render "layouts/side-barMypage"
+    = render "layouts/side-barMypage"
 
   = render "layouts/footer"
