--- a/app/views/users/logout.html.haml
+++ b/app/views/users/logout.html.haml
@@ -2,7 +2,7 @@
 
 .wrapper
   .content.clearfix
-    %logout
+    %form
       =link_to "ログアウト", destroy_user_session_path, method: :delete, class: "logout-btn" 
 
     = render "layouts/side-barMypage"
