--- a/app/assets/stylesheets/user/_mypage.scss
+++ b/app/assets/stylesheets/user/_mypage.scss
@@ -12,7 +12,8 @@
         height: 200px;
         padding: 20px;
         text-align: center;
-        background-image: url("/Italy.jpeg");
+        background-color: #FEECD0;
+        // background-image: url("/Italy.jpeg");
         background-repeat: no-repeat;
         background-size: cover;
         position: relative;
