--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -69,5 +69,5 @@
               取引中の商品がありません
 
     = render "layouts/side-barMypage"
-
+  = render "devise/shared/red-btn"
   = render "layouts/footer"
