--- a/app/assets/stylesheets/user/profile.scss
+++ b/app/assets/stylesheets/user/profile.scss
@@ -19,14 +19,14 @@
         padding: 8px 0 8px;
       }
     .setting-profile-icon{
-      background-color: lightgray;
+      background-color: #FEECD0;
       padding: 72px 0 24px;
       text-align: center;
       .wrapper{
         width: 100%;
         display: inline-flex;
         justify-content: center;
-        background-color: lightgray;
+        background-color: #FEECD0;
         .icon-image{
           .prof-photo{
             border-radius: 50%;
