パンくず追加

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,7 +1,8 @@
 .wrapper
 
   = render "layouts/header"
-
+  - breadcrumb :show
+  = render "layouts/breadcrumbs"
   .bodyMypage.clearfix
     .main
       .user
