パンくず親設定

--- a/app/views/users/user_info_register.haml
+++ b/app/views/users/user_info_register.haml
@@ -1,5 +1,6 @@
 = render "layouts/header"
-
+- breadcrumb :user_info_register
+= render "layouts/breadcrumbs"
 .user_info_register
   .both-content
     .info_contents
