--- a/app/views/users/logout.html.haml
+++ b/app/views/users/logout.html.haml
@@ -1,5 +1,6 @@
 = render "layouts/header"
-
+- breadcrumb :logout
+= render "layouts/breadcrumbs"
 .logout-main
   .both-content-log
     .logout-body
