--- a/app/views/product/product-details.html.haml
+++ b/app/views/product/product-details.html.haml
@@ -73,7 +73,7 @@
         .price-tax__content (税込)
       .price-fee
         .price-fee__content 送料込み
-    = link_to "購入画面に進む", root_path, class: "item__buy-btn"
+    = link_to "購入画面に進む", pay_confirm_product_path, class: "item__buy-btn"
     %p.allowed-message
     .item__description
       商品の説明です
