--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,7 @@
 @import "module/clearfix";
 // @import "module/boxsize";
 @import "top/header";
+@import "top/breadcrumbs";
 @import "top/footer";
 @import "top/home";
 @import "devise/header_footer";
