--- a/app/views/pay-confirm/paypay.html.haml
+++ b/app/views/pay-confirm/paypay.html.haml
@@ -1,7 +1,7 @@
 .main-content
   %header.main-header
     %h1.head-logo
-      = link_to image_tag("SVG/fmarket_logo_red.svg", alt: "ギャゾー", class: "mercari-logo"),root_path
+      = link_to image_tag @product.image_url, alt: "ギャゾー", class: "mercari-logo"
   %main.pay-main
     %section.pay-item-content
       %h2.pay-head 購入内容確認
@@ -50,4 +50,14 @@
           %p.change
           = link_to "変更する >", root_path, class: "user-info-fix"
           .dammy
-= render "devise/shared/footer-login"
+  %footer.pain-footer
+    %nav
+      %ul.script
+        %li.manner
+          = link_to "プライバシーポリシー", "https://www.mercari.com/jp/privacy/", class: "manual"
+        %li.manner
+          = link_to "メルカリ利用規約", "https://www.mercari.com/jp/tos/", class: "manual"
+        %li.manner
+          = link_to "特定商取引に関する表記", "https://www.mercari.com/jp/tokutei/", class: "manual"
+    = link_to image_tag("SVG/fmarket_logo_red.svg", target: "_blank", alt: "mercari", class: "footer-logo"),root_path
+    %p.copyright ©︎ ⅡOⅠⅨ Mercari
