--- a/app/views/layouts/_breadcrumbs.html.haml
+++ b/app/views/layouts/_breadcrumbs.html.haml
@@ -1,3 +1,4 @@
 .breadcrumbs
-  %ul
-    = breadcrumbs pretext: "",separator: " &rsaquo; ", class: "breadcrumbs-list"
+  .content-bread
+    %ul
+      = breadcrumbs pretext: "",separator: " #{content_tag(:i, '', class:'fa fa-chevron-right')}", class: "breadcrumbs-list"
