ログアウトボタンリンク全部押せるようにした。

--- a/app/assets/stylesheets/devise/logout.scss
+++ b/app/assets/stylesheets/devise/logout.scss
@@ -19,6 +19,8 @@
         position: absolute;
         top: 64px;
         left:178px;
+        line-height: 50px;
+        text-decoration: none;
         .text-logout{
           color: #fff;
           margin: 0 auto;
