--- a/app/assets/stylesheets/devise/_login.scss
+++ b/app/assets/stylesheets/devise/_login.scss
@@ -174,6 +174,9 @@
             font-size: 14px;
             cursor: pointer;
           }
+          input.email-address{
+            margin-bottom: 24px;
+          }
           .forgot-password {
             float: left;
             .resetting {
