--- a/app/views/card/edit.haml
+++ b/app/views/card/edit.haml
@@ -1,7 +1,7 @@
 .body-side
-  =render "deviseGo/login-header"
+  =render "devise/shared/login-header"
   .parent
-    =render "user-login-signup/side-barMypage"
+    =render "layouts/side-barMypage"
     .credit-box
       .credit-box__title
         %h2 クレジットカード情報入力
@@ -25,15 +25,15 @@
                 %span.must-content
                   必須
                 .select-parrent
-                  =render "deviseGo/option-birthMonth"
+                  =render "deviseGo/option-card"
               .form-group-credit
                 %label.municipality-new
                   セキュリティコード
                 %span.must-content
                   必須
                 %input.password-info{placeholder: "カード背面4桁もしくは3桁の番号", value: ""}/
-              =link_to "" do
-                =f.button "次へ進む", class: "go-ahead"
+              =link_to user_path do
+                =f.submit "次へ進む", class: "go-ahead"
               =link_to "", class: "link-for-user-info" do
                 カード裏面の番号とは？
                 =fa_icon'chevron-right'
