新規登録時のバリデーションエラーメッセージ実装

--- a/app/assets/stylesheets/devise/signup2.scss
+++ b/app/assets/stylesheets/devise/signup2.scss
@@ -17,7 +17,7 @@
       }
       form{
         padding: 40px 40px 64px;
-        height: 1111px;
+        height: 100%;
         text-align: left;
         .formbox{
           width: 343px;
