--- a/app/assets/stylesheets/devise/signup3.scss
+++ b/app/assets/stylesheets/devise/signup3.scss
@@ -4,7 +4,7 @@
     .tell-box{
       width: 700px;
       max-width: 100%;
-      height: 498px;
+      height: 100%;
       margin: 0 auto;
       background-color: white;
       &__title{
