--- a/app/assets/stylesheets/devise/signup4.scss
+++ b/app/assets/stylesheets/devise/signup4.scss
@@ -2,9 +2,9 @@
   .body{
     @include bodyTemp;
     .addless-box{
-      width: 700px;
+    width: 700px;
       max-width: 100%;
-      height: 1150px;
+      height: 100%;
       margin: 0 auto;
       background-color: white;
       &__title{
@@ -19,7 +19,7 @@
         }
       }
       &__body{
-        height: 1055px;
+        height: 100%;
         .push-box{
           form{
             padding: 20px 40px 64px;
