--- a/app/views/deviseGo/_option-birthYear.html.haml
+++ b/app/views/deviseGo/_option-birthYear.html.haml
@@ -1,7 +1,7 @@
 = form_for @user, url: signup3_signup_index_path, method: :get do |f|
   .select-parrent-cursor
     =f.select :birth_year, class:"birthYear" do
-      %option --
+      %option{:value => ""} --
       %option{:value => "1900"} 1900
       %option{:value => "1901"} 1901
       %option{:value => "1902"} 1902
