--- a/app/views/signup/signup2.html.haml
+++ b/app/views/signup/signup2.html.haml
@@ -51,18 +51,24 @@
           %span.must-content
             必須
           = f.text_field :nickname, class:"nickname-info", value: "", placeholder: "例) メルカリ太郎", maxlength: "20"
+          - if @user.errors.any?
+            %p.error-message ニックネームを入力して下さい
         .form-group
           %label.mailAddless-new
             メールアドレス
           %span.must-content
             必須
           = f.text_field :email, class:"mailAddless-info", value: "", placeholder: "PC・携帯どちらでも可"
+          - if @user.errors.any?
+            %p.error-message メールアドレスを入力して下さい 例)test@test.com
         .form-group
           %label.password-new
             パスワード
           %span.must-content
             必須
           = f.password_field :password, class:"password-info", value: "", placeholder: "7文字以上"
+          - if @user.errors.any?
+            %p.error-message パスワードを入力して下さい
           .check-box
             %label.checkbox
               %input.password-check{type: "checkbox"}
@@ -80,6 +86,8 @@
           .input-parrent
             = f.text_field :last_name, class: "kanji1stName-info", value: "", placeholder: "例) 山田", maxlength: "20"
             = f.text_field :first_name, class: "kanji2ndName-info", value: "" , placeholder: "例) 彩", maxlength: "20"
+          - if @user.errors.any?
+            %p.error-message 氏名を入力して下さい
         .form-group
           %label.kanaName-new
             お名前(全角)
@@ -88,6 +96,8 @@
           .input-parrent
             = f.text_field :last_name_kana, class: "kana1stName-info", value: "" , placeholder: "例) ヤマダ"
             = f.text_field :first_name_kana, class: "kana2ndName-info", value: "" , placeholder: "例) アヤ"
+          - if @user.errors.any?
+            %p.error-message 氏名(フリガナ)を入力して下さい
         .form-group
           %label.birthday-new
             生年月日
@@ -95,6 +105,8 @@
             必須
           .select-parrent
             =render "deviseGo/option-birthYear"
+          - if @user.errors.any?
+            %p.error-message 生年月日を選択して下さい
           %p.must-text ※ 本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。
         .form-robot
           %button.recaptcha
