--- a/app/views/signup/signup4.html.haml
+++ b/app/views/signup/signup4.html.haml
@@ -51,6 +51,8 @@
               .input-parrent
                 = f.text_field :last_name_delivery, class: "kanji1stName-info", value: "", placeholder: "例) 山田", maxlength: "20"
                 = f.text_field :first_name_delivery, class: "kanji2ndName-info", value: "", placeholder: "例) 彩", maxlength: "20"
+              - if @user.errors.any?
+                %p.error-message 氏名を入力して下さい
             .form-group
               %label.kanaName-new
                 お名前(全角)
@@ -59,12 +61,16 @@
               .input-parrent
                 = f.text_field :last_name_kana_delivery, class: "kana1stName-info", value: "", placeholder: "例) ヤマダ", maxlength: "20"
                 = f.text_field :first_name_kana_delivery, class: "kana2ndName-info", value: "", placeholder: "例) アヤ", maxlength: "20"
+              - if @user.errors.any?
+                %p.error-message 氏名(フリガナ)を入力して下さい
             .form-group
               %label.yubinNum-new
                 郵便番号
               %span.must-content
                 必須
               = f.text_field :postal_code, class: "yubinNum-info", value: "", placeholder: "例) 123-4567"
+            - if @user.errors.any?
+              %p.error-message 郵便番号を入力して下さい(ハイフンが必要です)
             .form-group
               %label.prefecture-new
                 都道府県
@@ -72,18 +78,24 @@
                 必須
               .select-prefectures
                 = f.collection_select :prefectures, Prefecture.all, :id, :name
+              - if @user.errors.any?
+                %p.error-message 都道府県を選択して下さい
             .form-group
               %label.municipality-new
                 市町村
               %span.must-content
                 必須
               = f.text_field :city, class: "password-info", value: "", placeholder: "例) 横浜市緑区"
+            - if @user.errors.any?
+              %p.error-message 市町村を入力して下さい
             .form-group
               %label.banchi-new
                 番地
               %span.must-content
                 必須
               = f.text_field :address, class: "password-info", value: "", placeholder: "例) 青山市1-1-1"
+            - if @user.errors.any?
+              %p.error-message 市町村を入力して下さい
             .form-group
               %label.billding-new
                 建物名
@@ -96,6 +108,5 @@
               %span.nini-content
                 任意
               = f.text_field :phone_number_delivery, class: "tellNum-info", value: "", placeholder: "09012345678"
-            -# =link_to signup5_signup_index_path do
             = f.submit "次へ進む", class: "go-ahead4"
   =render "devise/shared/footer-login"
