--- a/app/views/products/pay_confirm.haml
+++ b/app/views/products/pay_confirm.haml
@@ -33,7 +33,7 @@
                   .pay-btn
                   ¥
                   = @product.price
-          = form_with model: @product, local: true, class: "purchase-forms", url: purchase_product_path do |f|
+          = form_with class: "purchase-forms", url: purchase_product_path, local: true do |f|
             = f.submit "購入する", class: "pay-btn"
             %input{name: "seller_id", type: "hidden", value: "722674558"}
           -# = link_to root_path do
