--- a/app/assets/stylesheets/devise/_login.scss
+++ b/app/assets/stylesheets/devise/_login.scss
@@ -72,12 +72,13 @@
               color: #fff;
               margin-left: 5px;
               float: left;
+              margin-top: 7px;
             }
             .fb-login {
               color: #fff;
               text-align: center;
               font-size: 13px;
-              margin-top: 7px;
+              line-height: 45px;
             }
           }
           .google {
@@ -326,12 +327,13 @@
               color: #fff;
               margin-left: 5px;
               float: left;
+              margin-top: 7px;
             }
             .fb-login {
               color: #fff;
               text-align: center;
               font-size: 13px;
-              margin-top: 7px;
+              line-height: 45px;
             }
           }
           .google {
