--- a/app/assets/stylesheets/products/_done.scss
+++ b/app/assets/stylesheets/products/_done.scss
@@ -3,7 +3,7 @@
   display: grid;
   width: 700px;
   height: 200px;
-  margin: 0 auto;
+  margin: 45px auto;
   background-color: white;
   h2 {
     padding: 32px 16px;
@@ -13,7 +13,7 @@
   }
   a.return {
     text-decoration: none;
-    color: blue;
+    color: #0099e8;
     text-align: center;
   }
 }
