--- a/app/views/products/pay_confirm.haml
+++ b/app/views/products/pay_confirm.haml
@@ -35,7 +35,8 @@
                   = @product.price
           = form_with class: "purchase-forms", url: purchase_product_path, local: true do |f|
             = f.submit "購入する", class: "pay-btn"
-           
+          :plain
+          %script.payjp-button{"data-key" => 'sk_test_9931066098f8c99168e275fa', src: "https://checkout.pay.jp", type: "text/javascript"}
 
       %section.pay-user-info
         .pay-content-info
