スライド呼び出し

--- a/app/views/home/top.html.haml
+++ b/app/views/home/top.html.haml
@@ -1,6 +1,11 @@
 = render 'layouts/header'
 .main
   .slide
+    = image_tag "images/test.jpeg", class: "slide-image", size: '69x37'
+    .slideB
+      tue
+    .slideB
+      omoto
   .top-nav
     .Category
       人気のカテゴリー
