--- a/app/assets/stylesheets/top/home.scss
+++ b/app/assets/stylesheets/top/home.scss
@@ -9,8 +9,9 @@
   width: 100%;
   .slide {
     height: 390px;
-    background-image: url("test.jpeg");
-    background-size: cover;
+    .slide-image{
+      width: 100%;
+    }
   }
 }
 .top-nav {
