--- a/app/views/products/pay_confirm.haml
+++ b/app/views/products/pay_confirm.haml
@@ -35,8 +35,11 @@
                   = @product.price
           = form_with class: "purchase-forms", url: purchase_product_path, local: true do |f|
             = f.submit "購入する", class: "pay-btn"
-          :plain
-          %script.payjp-button{"data-key" => 'sk_test_9931066098f8c99168e275fa', src: "https://checkout.pay.jp", type: "text/javascript"}
+          -#   = form_tag(action: :purchase, method: :post) do
+          -#     %script.payjp-button{src: "https://checkout.pay.jp", type: "text/javascript" ,"data-text" => "購入する" ,"data-key" => "sk_test_9931066098f8c99168e275fa"}
+          -# -# :plain
+          -# -# -# %script.payjp-button{"data-key" => 'sk_test_9931066098f8c99168e275fa', src: "https://checkout.pay.jp", type: "text/javascript"}
+          -# -# %script.payjp-button{"data-key" => 'sk_test_9931066098f8c99168e275fa', "data-payjp" => "", :src => "https://checkout.pay.jp/", :type => "text/javascript"}
 
       %section.pay-user-info
         .pay-content-info
