--- a/app/assets/stylesheets/user/_my-product.scss
+++ b/app/assets/stylesheets/user/_my-product.scss
@@ -6,9 +6,8 @@
   text-rendering: auto;
 }
 .main-product {
-  margin: 40px auto 0;
+  // margin: 40px auto 0;
   padding: 24px 40px 40px;
-  background-color: beige;
   .sequel {
     width: 700px;
     margin: auto;
