--- a/app/assets/stylesheets/user/_side-barMypage.scss
+++ b/app/assets/stylesheets/user/_side-barMypage.scss
@@ -29,7 +29,7 @@
         line-height: 28px;
       }
       li:hover{
-        background-color: #f5f5f5f5;
+        background-color: #f5f5ff;
         .icon{
           color:black;
           left: 257px;
