--- a/app/views/home/top.html.haml
+++ b/app/views/home/top.html.haml
@@ -1,11 +1,10 @@
 = render 'layouts/header'
 .main
   .slide
-    = image_tag "images/test.jpeg", class: "slide-image", size: '69x37'
     .slideB
-      tue
+      = image_tag "images/slide1.png", class: "slide-image"
     .slideB
-      omoto
+      = image_tag "images/test.jpeg", class: "slide-image"
   .top-nav
     .Category
       人気のカテゴリー
