クラス名修正

--- a/app/views/products/done.html.haml
+++ b/app/views/products/done.html.haml
@@ -1,6 +1,6 @@
 = render "devise/shared/header-login"
 
-.link
+.parchese-done
   %h2 ご購入ありがとうございます！
   = link_to root_path, class: "return" do
     商品画面に戻る
