--- a/app/assets/stylesheets/top/home.scss
+++ b/app/assets/stylesheets/top/home.scss
@@ -8,11 +8,21 @@
 .main {
   width: 100%;
   .slide {
-    height: 390px;
+    height: 500px;
     .slide-image{
       width: 100%;
-      height: 390px;
+      height: 550px;
       box-sizing: border-box;
+    }
+    .slick-dots {
+      li {
+        font-size: 20px !important;
+        button:before {
+          content: "●" !important;
+          font-size: 14px !important;
+          color: #f5f5f5 !important;
+        }
+      }
     }
   }
 }
