--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -4,7 +4,7 @@
     .slideB
       = image_tag "slide1.png", class: "slide-image"
     .slideB
-      = image_tag "banana.jpeg", class: "slide-image"
+      = image_tag "slide_5.png", class: "slide-image"
     .slideB
       = image_tag "test.jpeg", class: "slide-image"
   .top-nav
