--- a/app/assets/stylesheets/top/home.scss
+++ b/app/assets/stylesheets/top/home.scss
@@ -24,6 +24,13 @@
         }
       }
     }
+    .slick-prev{
+        font-size: 80px !important;
+        button:before {
+          font-size: 60px !important;
+          color: #f5f5f5 !important;
+      }
+    }
   }
 }
 .top-nav {
