--- a/app/views/home/top.html.haml
+++ b/app/views/home/top.html.haml
@@ -4,7 +4,7 @@
     .slideB
       = image_tag "images/slide1.png", class: "slide-image"
     .slideB
-      = image_tag "images/test.jpeg", class: "slide-image"
+      = image_tag "test.jpeg", class: "slide-image"
   .top-nav
     .Category
       人気のカテゴリー
