写真エラー解消

--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -6,7 +6,7 @@
     .slideB
       = image_tag "slide_5.png", class: "slide-image"
     .slideB
-      = image_tag "test.jpeg", class: "slide-image"
+      -# = image_tag "test.jpeg", class: "slide-image"
   .top-nav
     .Category
       人気のカテゴリー
