購入後sutetusカラムの値を変更

--- a/app/views/products/pay_confirm.haml
+++ b/app/views/products/pay_confirm.haml
@@ -33,7 +33,7 @@
                   %span.value
                   ¥
                   = @product.price
-          = form_with class: "purchase-forms", url: purchase_product_path, local: true do |f|
+          = form_with model: @product, class: "purchase-forms", url: purchase_product_path, local: true do |f|
             = f.submit "購入する", class: "pay-btn"
           -#   = form_tag(action: :purchase, method: :post) do
           -#     %script.payjp-button{src: "https://checkout.pay.jp", type: "text/javascript" ,"data-text" => "購入する" ,"data-key" => "sk_test_9931066098f8c99168e275fa"}
