--- a/app/assets/stylesheets/devise/_login.scss
+++ b/app/assets/stylesheets/devise/_login.scss
@@ -4,7 +4,6 @@
     font-size: 14px;
     color: #333;
     line-height: 1;
-    //overflow: scroll;
     width: 100%;
     height: 100%;
     .header{
@@ -53,8 +52,7 @@
             margin: 8px 0 0;
             font-size: 14px;
             color: #fff;
-            text-decoration:none;
-            
+            text-decoration: none;
           }
         }
         .social-login {
@@ -64,7 +62,7 @@
             height: 50px;
             width: 328px;
             min-width: 328px;
-            color: fff;
+            color: #fff;
             background-color: #385185;
             &-logo {
               height: 30px;
@@ -79,6 +77,10 @@
               text-align: center;
               font-size: 13px;
               line-height: 45px;
+              text-decoration: none;
+            }
+            a {
+              text-decoration: none;
             }
           }
           .google {
@@ -96,8 +98,13 @@
               color: firebrick;
             }
             .ggl-login {
+              color: black;
               text-align: center;
               font-size: 13px;
+              text-decoration: none;
+            }
+            a {
+              text-decoration: none;
             }
           }
         }
@@ -123,7 +130,6 @@
           .recaptcha {
             width: 304px;
             height: 78px;
-           
             border-radius: 2px;
             float: left;
             .left-side {
@@ -194,7 +200,6 @@
     }
     .body-foot{
       margin:0 auto;
-      //height: 140px;
       padding: 40px 0;
       position: relative;
       .footer{
@@ -319,7 +324,7 @@
             height: 50px;
             width: 328px;
             min-width: 328px;
-            color: fff;
+            color: #fff;
             background-color: #385185;
             &-logo {
               height: 30px;
