--- a/app/assets/stylesheets/product/product-placing-page.scss
+++ b/app/assets/stylesheets/product/product-placing-page.scss
@@ -264,6 +264,7 @@
                 }
                 .product-price__default {
                   margin-left: 5%;
+                  min-height: 48px;
                 }
               }
             }
