売り切れ、出品停止の条件分岐１

--- a/app/views/products/my_product_detail.html.haml
+++ b/app/views/products/my_product_detail.html.haml
@@ -14,6 +14,8 @@
         %span= @product.name
       - if @product.status == 2
         出品停止中
+      - elsif @product.status == 3
+        SOLD
       .item__content
         .content-photo
           .content-photo__top
