--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -2,6 +2,10 @@
   .item
     .item__name
       %span= @product.name
+    - if @product.status == 2
+      出品停止中
+    - elsif @product.status == 3
+      SOLD
     .item__content
       .content-photo
         .content-photo__top
@@ -74,7 +78,7 @@
         .price-tax__content (税込)
       .price-fee
         .price-fee__content 送料込み
-    - unless user_signed_in? && current_user.id == @product.user_id
+    - if user_signed_in? && current_user.id != @product.user_id
       = link_to "購入画面に進む", pay_confirm_product_path, class: "item__buy-btn"
     %p.allowed-message
     .item__description
