--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -47,19 +47,19 @@
                   .select-box
                     = f.select :category, class: "select-default" do
                       %option{selected: "selected"} --
-                      %option{selected: "selected"} レディース
-                      %option{selected: "selected"} メンズ
-                      %option{selected: "selected"} ベビー・キッズ
-                      %option{selected: "selected"} インテリア・住まい・小物
-                      %option{selected: "selected"} 本・音楽・ゲーム
-                      %option{selected: "selected"} おもちゃ・ホビー・グッズ
-                      %option{selected: "selected"} コスメ・香水・美容
-                      %option{selected: "selected"} 家電・スマホ・カメラ
-                      %option{selected: "selected"} スポーツ・レジャー
-                      %option{selected: "selected"} ハンドメイド
-                      %option{selected: "selected"} チケット
-                      %option{selected: "selected"} 自動車・オートバイ
-                      %option{selected: "selected"} その他
+                      %option{:value => "1"} レディース
+                      %option{:value => "2"} メンズ
+                      %option{:value => "3"} ベビー・キッズ
+                      %option{:value => "4"} インテリア・住まい・小物
+                      %option{:value => "5"} 本・音楽・ゲーム
+                      %option{:value => "6"} おもちゃ・ホビー・グッズ
+                      %option{:value => "7"} コスメ・香水・美容
+                      %option{:value => "8"} 家電・スマホ・カメラ
+                      %option{:value => "9"} スポーツ・レジャー
+                      %option{:value => "10"} ハンドメイド
+                      %option{:value => "11"} チケット
+                      %option{:value => "12"} 自動車・オートバイ
+                      %option{:value => "13"} その他
                     %i.fas.fa-republican
                     - if @product.errors.any?
                       %p.error-message 選択してください
@@ -70,12 +70,12 @@
                   %i.fas.fa-republican
                     = f.select :condition, class: "select-default" do
                       %option{selected: "selected"} --
-                      %option{selected: "selected"} 新品、未使用
-                      %option{selected: "selected"} 未使用に近い
-                      %option{selected: "selected"} 目立った傷や汚れなし
-                      %option{selected: "selected"} やや傷や汚れあり
-                      %option{selected: "selected"} 傷や汚れあり
-                      %option{selected: "selected"} 全体的に状態が悪い
+                      %option{:value => "1"} 新品、未使用
+                      %option{:value => "2"} 未使用に近い
+                      %option{:value => "3"} 目立った傷や汚れなし
+                      %option{:value => "4"} やや傷や汚れあり
+                      %option{:value => "5"} 傷や汚れあり
+                      %option{:value => "6"} 全体的に状態が悪い
                       - if @product.errors.any?
                         %p.error-message 選択してください
                     .product-details
@@ -92,8 +92,8 @@
                   %i.fas.fa-republican
                   = f.select :shipping_charge, class: "select-default" do
                     %option{selected: "selected"} --
-                    %option{selected: "selected"} 送料込み(出品者負担)
-                    %option{selected: "selected"} 着払い(購入者負担)
+                    %option{:value => "1"} 送料込み(出品者負担)
+                    %option{:value => "2"} 着払い(購入者負担)
                     - if @product.errors.any?
                       %p.error-message 選択してください
                 .transportation-name
@@ -105,53 +105,53 @@
                   -# 後ほどactive_hashを利用、現在仮置き
                   = f.select :shipping_place, class: "select-default" do
                     %option{selected: "selected"} --
-                    %option{selected: "selected"} 北海道
-                    %option{selected: "selected"} 青森県
-                    %option{selected: "selected"} 岩手県
-                    %option{selected: "selected"} 宮城県
-                    %option{selected: "selected"} 秋田県
-                    %option{selected: "selected"} 山形県
-                    %option{selected: "selected"} 福島県
-                    %option{selected: "selected"} 茨城県
-                    %option{selected: "selected"} 栃木県
-                    %option{selected: "selected"} 群馬県
-                    %option{selected: "selected"} 埼玉県
-                    %option{selected: "selected"} 千葉県
-                    %option{selected: "selected"} 東京都
-                    %option{selected: "selected"} 神奈川県
-                    %option{selected: "selected"} 新潟県
-                    %option{selected: "selected"} 富山県
-                    %option{selected: "selected"} 石川県
-                    %option{selected: "selected"} 福井県
-                    %option{selected: "selected"} 山梨県
-                    %option{selected: "selected"} 長野県
-                    %option{selected: "selected"} 岐阜県
-                    %option{selected: "selected"} 静岡県
-                    %option{selected: "selected"} 愛知県
-                    %option{selected: "selected"} 三重県
-                    %option{selected: "selected"} 滋賀県
-                    %option{selected: "selected"} 京都府
-                    %option{selected: "selected"} 大阪府
-                    %option{selected: "selected"} 兵庫県
-                    %option{selected: "selected"} 奈良県
-                    %option{selected: "selected"} 和歌山県
-                    %option{selected: "selected"} 鳥取県
-                    %option{selected: "selected"} 島根県
-                    %option{selected: "selected"} 岡山県
-                    %option{selected: "selected"} 広島県
-                    %option{selected: "selected"} 山口県
-                    %option{selected: "selected"} 徳島県
-                    %option{selected: "selected"} 香川県
-                    %option{selected: "selected"} 愛媛県
-                    %option{selected: "selected"} 高知県
-                    %option{selected: "selected"} 福岡県
-                    %option{selected: "selected"} 佐賀県
-                    %option{selected: "selected"} 長崎県
-                    %option{selected: "selected"} 熊本県
-                    %option{selected: "selected"} 大分県
-                    %option{selected: "selected"} 宮崎県
-                    %option{selected: "selected"} 鹿児島県
-                    %option{selected: "selected"} 沖縄県
+                    %option{:value => "1"} 北海道
+                    %option{:value => "2"} 青森県
+                    %option{:value => "3"} 岩手県
+                    %option{:value => "4"} 宮城県
+                    %option{:value => "5"} 秋田県
+                    %option{:value => "6"} 山形県
+                    %option{:value => "7"} 福島県
+                    %option{:value => "8"} 茨城県
+                    %option{:value => "9"} 栃木県
+                    %option{:value => "10"} 群馬県
+                    %option{:value => "11"} 埼玉県
+                    %option{:value => "12"} 千葉県
+                    %option{:value => "13"} 東京都
+                    %option{:value => "14"} 神奈川県
+                    %option{:value => "15"} 新潟県
+                    %option{:value => "16"} 富山県
+                    %option{:value => "17"} 石川県
+                    %option{:value => "18"} 福井県
+                    %option{:value => "19"} 山梨県
+                    %option{:value => "20"} 長野県
+                    %option{:value => "21"} 岐阜県
+                    %option{:value => "22"} 静岡県
+                    %option{:value => "23"} 愛知県
+                    %option{:value => "24"} 三重県
+                    %option{:value => "25"} 滋賀県
+                    %option{:value => "26"} 京都府
+                    %option{:value => "27"} 大阪府
+                    %option{:value => "28"} 兵庫県
+                    %option{:value => "29"} 奈良県
+                    %option{:value => "30"} 和歌山県
+                    %option{:value => "31"} 鳥取県
+                    %option{:value => "32"} 島根県
+                    %option{:value => "33"} 岡山県
+                    %option{:value => "34"} 広島県
+                    %option{:value => "35"} 山口県
+                    %option{:value => "36"} 徳島県
+                    %option{:value => "37"} 香川県
+                    %option{:value => "38"} 愛媛県
+                    %option{:value => "39"} 高知県
+                    %option{:value => "40"} 福岡県
+                    %option{:value => "41"} 佐賀県
+                    %option{:value => "42"} 長崎県
+                    %option{:value => "43"} 熊本県
+                    %option{:value => "44"} 大分県
+                    %option{:value => "45"} 宮崎県
+                    %option{:value => "46"} 鹿児島県
+                    %option{:value => "47"} 沖縄県
                     - if @product.errors.any?
                       %p.error-message 選択してください
                 .transportation-name
@@ -161,9 +161,9 @@
                 .select-box
                   = f.select :shipping_date, class: "select-default" do
                     %option{selected: "selected"} --
-                    %option{selected: "selected"} 1~2日で発送
-                    %option{selected: "selected"} 2~3日で発送
-                    %option{selected: "selected"} 4~7日で発送
+                    %option{:value => "1"} 1~2日で発送
+                    %option{:value => "2"} 2~3日で発送
+                    %option{:value => "3"} 4~7日で発送
                     - if @product.errors.any?
                       %p.error-message 選択してください
             .price
