--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,7 +16,7 @@
 @import "devise/signup3";
 @import "devise/signup4";
 @import "devise/signup5";
-@import "devise/signup6";
+@import "devise/done";
 @import "pay-confirm/paypay";
 @import "devise/login";
 @import "devise/logout";
