--- a/app/assets/stylesheets/devise/done.scss
+++ b/app/assets/stylesheets/devise/done.scss
@@ -5,7 +5,7 @@
       height: 438px;
       width: 700px;
       max-width: 100%;
-      margin: 0 auto;
+      margin: 120px auto 0;
       background-color: white;
       &__title{
         display: block;
@@ -19,7 +19,7 @@
         }
       }
       &__body{
-          form{
+          .form{
             padding: 20px 40px 64px;
             text-align: left;
             p{
@@ -30,15 +30,15 @@
             .formbox{
               width: 343px;
               margin:0 auto;
-            }
-            .go-ahead{
-              margin-top: 30px;
-              @include submit-btn;
+              button.go-ahead{
+                margin-top: 30px;
+                @include submit-btn;
+              }
             }
           }
         .tech-image{
           width: 700px;
-          height: 240px;;
+          height: 240px;
         }
       }
     }
@@ -77,7 +77,7 @@
               width: 343px;
               margin:0 auto;
             }
-            .go-ahead{
+            button.go-ahead{
               margin-top: 30px;
               @include submit-btn;
             }
