--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -78,8 +78,12 @@
         .price-tax__content (税込)
       .price-fee
         .price-fee__content 送料込み
-    - if user_signed_in? && current_user.id != @product.user_id
+    - if user_signed_in? && current_user.id != @product.user_id && @product.status == 1
       = link_to "購入画面に進む", pay_confirm_product_path, class: "item__buy-btn"
+    -# - if @product.status == 1
+    -#   = link_to "購入画面に進む", pay_confirm_product_path, class: "item__buy-btn"
+    -# - elsif @product.status == 3
+    -#   = link_to "売り切れました", "#", class: "item__but-btn"
     %p.allowed-message
     .item__description
       %span= @product.text
