会員登録ビュー微修正

--- a/app/views/signup/signup2.html.haml
+++ b/app/views/signup/signup2.html.haml
@@ -90,7 +90,7 @@
             %p.error-message 氏名を入力して下さい
         .form-group
           %label.kanaName-new
-            お名前(全角)
+            お名前カナ(全角)
           %span.must-content
             必須
           .input-parrent
