--- a/app/views/保存用product/product-details.html.haml
+++ b/app/views/保存用product/product-details.html.haml
@@ -79,8 +79,8 @@
       商品の説明です
     .item__botton
       .botton-left
-        %button.botton-left__icon
-          = render 'likes/like_links', product: product
+        -# %button.botton-left__icon
+        = render 'likes/like_links', product: product
           -# %i.far.fa-heart
           %span いいね!
           %span.fade-in-down 0
