いいねカウント表示

--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -89,10 +89,7 @@
       %span= @product.text
     .item__botton
       .botton-left
-        %button.botton-left__icon
-          %i.far.fa-heart
-          %span いいね!
-          %span.fade-in-down 0
+        = render 'likes/like_links', product: @product
         %button.botton-left__icon
           %i.far.fa-flag
           %span 報告
