--- a/app/views/likes/_like_links.html.haml
+++ b/app/views/likes/_like_links.html.haml
@@ -1,9 +1,11 @@
 %div.like-link{id: "like-link-#{@product.id}"}
   - if current_user.likes.find_by(product_id: @product.id)
     = link_to unlike_path(@product.id), method: :delete, remote: true do
-      .btn.btn-default.glyphicon.glyphicon-heart{id: "heart-#{@product.id}"}
+      .btn.btn-default.glyphicon.far.fa-heart{id: "heart-#{@product.id}"}
         = @product.likes.count.to_s
+    %span いいね
   - else
     = link_to like_path(@product.id), method: :post, remote: true do
-      .btn.btn-default.glyphicon.glyphicon-heart-empty{id: "heart-#{@product.id}"}
+      .btn.btn-default.glyphicon.far.fa-heart-empty{id: "heart-#{@product.id}"}
         = @product.likes.count.to_s
+    %span いいね
