マイページ出品状態ラベル１

--- a/app/views/home/top.html.haml
+++ b/app/views/home/top.html.haml
@@ -34,7 +34,7 @@
                     %span ¥1,000
                 .contents-item__index
                   .contents-item__index--name 
-                    %span 粉雪舞う季節はいつもすれ違い人混みに紛れても同じ空見てるのに。風に吹かれて似たように凍えるのに。些細な言い合いもなくてララライララライ
+                    %span テスト
           %li
             .main-contents-box
               %a.contents-item{href: "#"}
