--- a/app/assets/stylesheets/product/product-details.scss
+++ b/app/assets/stylesheets/product/product-details.scss
@@ -203,7 +203,7 @@
         font-size: 14px;
         background: #fff6de;
       }
-      .message-textarea{
+      #comment_comment{
         margin-top: 8px;
         width: 100%;
         max-width: 100%;
