--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -114,12 +114,11 @@
       %p 相手のことを考え丁寧なコメントを心がけましょう。不快な言葉遣いなどは利用制限や退会処分となることがあります。
     - if user_signed_in?
       = form_with(model: [@product, @comment], local: true) do |f|
-        = f.text_area :comment, rows: "5", class: "message-textarea"
+        = f.text_area :comment, rows: "5", class: "message-textarea", id: "comment_comment"
         = f.submit "コメントする", class: "message-submit"
     - else
       %strong
         %p ※※※ コメントの投稿には新規登録/ログインが必要です ※※※
-        -# %span コメントする
 
   %ul.nav
     %li
