--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -89,7 +89,7 @@
       %span= @product.text
     .item__botton
       .botton-left
-        %button.botton-left__icon
+        %button.botton-left__icon.like-icon
           = render 'likes/like_links', product: @product
         %button.botton-left__icon
           %i.far.fa-flag
