--- a/app/assets/stylesheets/devise/done.scss
+++ b/app/assets/stylesheets/devise/done.scss
@@ -5,7 +5,7 @@
       height: 438px;
       width: 700px;
       max-width: 100%;
-      margin: 120px auto 0;
+      margin: 0 auto;
       background-color: white;
       &__title{
         display: block;
