--- a/app/views/products/my_product_detail.html.haml
+++ b/app/views/products/my_product_detail.html.haml
@@ -99,12 +99,23 @@
             = f.submit "出品を再開する", class: "btn-default restart"
         = link_to product_path, class: "btn-default delete-item", method: :delete do
           商品を削除する
-    .message
-      .message__contents
-        .message-items
-      .message__contents
-        %p 相手のことを考え丁寧なコメントを心がけましょう。不快な言葉遣いなどは利用制限や退会処分となることがあります。
-        %textarea.message-textarea{name: "body", type: "text", value: ""}
-        %button.message-submit{type: "submit"}
-          %span コメントする
+  .message
+    .message__contents
+    - if @comments
+      - @comments.each do |comment|
+        %p
+          %strong
+            = link_to comment.user.nickname, "/users/#{comment.user_id}"
+            ：
+            = comment.comment
+      .message-items
+    .message__contents
+      %p 相手のことを考え丁寧なコメントを心がけましょう。不快な言葉遣いなどは利用制限や退会処分となることがあります。
+    - if user_signed_in?
+      = form_with(model: [@product, @comment], local: true) do |f|
+        = f.text_area :comment, rows: "5", class: "message-textarea", id: "comment_comment"
+        = f.submit "コメントする", class: "message-submit"
+    - else
+      %strong
+        %p ※※※ コメントの投稿には新規登録/ログインが必要です ※※※
 = render "layouts/footer"
