新着アイテムに変更

--- a/app/views/home/top.html.haml
+++ b/app/views/home/top.html.haml
@@ -22,7 +22,7 @@
     .main-contents
       .main-contents__top
         .main-contents__header--name
-          レディース新着アイテム
+          新着アイテム
         =link_to "もっと見る ＞", class: "main-contents__header--more"
       .main-contents__goods
         %ul
@@ -33,7 +33,7 @@
                   .contents-item__image--price
                     %span ¥1,000
                 .contents-item__index
-                  .contents-item__index--name 
+                  .contents-item__index--name
                     %span テスト
           %li
             .main-contents-box
@@ -42,7 +42,7 @@
                   .contents-item__image--price
                     %span ¥1,000
                 .contents-item__index
-                  .contents-item__index--name 
+                  .contents-item__index--name
                     %span テスト
           %li
             .main-contents-box
@@ -51,7 +51,7 @@
                   .contents-item__image--price
                     %span ¥1,000
                 .contents-item__index
-                  .contents-item__index--name 
+                  .contents-item__index--name
                     %span テスト
           %li
             .main-contents-box
@@ -60,7 +60,7 @@
                   .contents-item__image--price
                     %span ¥1,000
                 .contents-item__index
-                  .contents-item__index--name 
+                  .contents-item__index--name
                     %span テスト
           %li
             .main-contents-box
@@ -143,8 +143,8 @@
                   .contents-item__image--price
                     %span ¥1,000
                 .contents-item__index
-                  .contents-item__index--name 
-                    %span 粉雪舞う季節はいつもすれ違い人混みに紛れても同じ空見てるのに。風に吹かれて似たように凍えるのに。些細な言い合いもなくてララライララライ
+                  .contents-item__index--name
+                    %span
           %li
             .main-contents-box
               %a.contents-item{href: "#"}
@@ -152,7 +152,7 @@
                   .contents-item__image--price
                     %span ¥1,000
                 .contents-item__index
-                  .contents-item__index--name 
+                  .contents-item__index--name
                     %span テスト
           %li
             .main-contents-box
@@ -161,7 +161,7 @@
                   .contents-item__image--price
                     %span ¥1,000
                 .contents-item__index
-                  .contents-item__index--name 
+                  .contents-item__index--name
                     %span テスト
           %li
             .main-contents-box
@@ -170,7 +170,7 @@
                   .contents-item__image--price
                     %span ¥1,000
                 .contents-item__index
-                  .contents-item__index--name 
+                  .contents-item__index--name
                     %span テスト
           %li
             .main-contents-box
@@ -194,7 +194,7 @@
                   .contents-item__image--price
                     %span ¥1,000
                 .contents-item__index
-                  .contents-item__index--name 
+                  .contents-item__index--name
                     %span テスト
       .main-contents__header
         .main-contents__header--name
@@ -209,7 +209,7 @@
                   .contents-item__image--price
                     %span ¥1,000
                 .contents-item__index
-                  .contents-item__index--name 
+                  .contents-item__index--name
                     %span テスト
       .main-contents__header
         .main-contents__header--name
@@ -224,7 +224,7 @@
                   .contents-item__image--price
                     %span ¥1,000
                 .contents-item__index
-                  .contents-item__index--name 
+                  .contents-item__index--name
                     %span テスト
 = render 'layouts/footer'
 = render "devise/shared/red-btn"
